--- a/04-API/03-XML-Legal-1/02-React-API-FE/src/MyApp/styles/00-main.css
+++ b/04-API/03-XML-Legal-1/02-React-API-FE/src/MyApp/styles/00-main.css
@@ -1,10 +1,10 @@
 body{
-    background-color: hsl(125, 96%, 72%);
+    background-color: rgb(140, 115, 252);
     padding: 5px 10px 5px 10px;
 }
 
 .secWrap{
-    background-color: hsl(195, 18%, 64%);
+    background-color: rgb(126, 253, 204);
     padding: 1px 0px 0px 15px;
     border: 1px solid black
 }
