add Log-In form

--- a/04-API/06-Stripe-App/02-Stripe-React-FE/src/MyApp/99-style.css
+++ b/04-API/06-Stripe-App/02-Stripe-React-FE/src/MyApp/99-style.css
@@ -99,3 +99,17 @@ body{
     width: 80%;
 }
 
+
+
+/* === LOG-IN.JSX =========================================================== */
+.LogInput{
+    background-color: antiquewhite;
+    margin: 0 auto 15px auto;
+    display: block;
+    padding: 4px 8px;
+    width: 50%;
+}
+
+.line50{
+    width: 50%;
+}
