--- a/04-API/06-Stripe-App/02-Stripe-React-FE/src/MyApp/99-style.css
+++ b/04-API/06-Stripe-App/02-Stripe-React-FE/src/MyApp/99-style.css
@@ -150,3 +150,11 @@ body{
 }
 
 
+
+
+/* === ONE-TIME-CHARGE.JSX =========================================================== */
+
+.superPic{
+    border: 2px solid rgb(183, 0, 255);
+    width: 80%;
+}
